Alterações Patrick Penha

--- a/Index.html
+++ b/Index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Fazenda Sharp City</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles/stylesIndex.css">
 </head>
+
 <body>
 
     <header>
-        <img src="./Imagem/Logo.png" alt="Fazenda Sharp City">
+        <img src="./components/images/Logo.png" alt="Fazenda Sharp City">
         <nav>
             <ul>
                 <li><a href="#" class="active">Home</a></li>
@@ -31,15 +33,16 @@
             <button onclick="login()">Acessar</button>
         </div>
         <div class="login-image">
-            <img src="./Imagem/Tela.png" alt="Imagem de fazenda">
+            <img src="./components/images/Tela.png" alt="Imagem de fazenda">
         </div>
     </div>
-    
+
 
     <footer>
         <p>© 2024 Fazenda Sharp City. Todos os direitos reservados.</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="./js/scripts.js"></script>
 </body>
+
 </html>
